add mobil version with media query

--- a/fansite.css
+++ b/fansite.css
@@ -53,6 +53,16 @@
     height: 50px;
 }
 
+label
+{
+    display: none;
+}
+
+label, #toggle
+{
+    display: none;
+}
+
 #home-content{
     display: flex;
     flex-direction: column;
@@ -140,7 +150,6 @@ footer{
 
 .menu-footer ul {
 	display: flex;
-    
     justify-content: space-around;
 	list-style: none;
 	width: 100%;
@@ -161,14 +170,14 @@ footer{
 }
 
 #bloc-actu-content{
-    background-color: white;
     display: flex;
     flex-direction: column;
     padding:5% 5% 5% 5%;
+    background-color: antiquewhite;
 }
 
 .image-actu{
-    width:30%;
+    width:40%;
 }
 
 .bloc-actu{
@@ -190,6 +199,7 @@ footer{
 
 .content-actu p, .content-actu h1{
     margin:2% 2% 2% 2%;
+    font-family: 'Poor Story', cursive;
 }
 
 #clip-page{
@@ -202,6 +212,9 @@ footer{
 
 #clip-spotify{
     padding:5%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 #all-clip{
@@ -219,6 +232,7 @@ footer{
     text-transform: uppercase;
     margin:4% 0% 4% 8%;
     font-size: 2.5em;
+    font-family: 'Poor Story', cursive;
 }
 .show-clip{
     background-color: rgb(148, 179, 124);
@@ -232,10 +246,12 @@ footer{
 
 .show-clip p, .show-clip h2{
     margin:2% 2% 2% 2%;
+    font-family: 'Poor Story', cursive;
 }
 
 .spotify-element{
    padding-left:10%;
+   width:40%;
 }
 
 .spotify-element:hover{
@@ -243,7 +259,7 @@ footer{
 }
 
 #body-even{
-    background-color: #F0F3C0;
+    background-color: antiquewhite;
 }
 
 #bandeau-even{
@@ -265,18 +281,18 @@ footer{
 
 @keyframes waviy {
     0%,100% {
-      transform: translateY(100px);
+      transform: translateY(80px);
       color: #E7FF1D;
     }
     20%{
-        transform: translateY(-10px);
+        transform: translateY(20px);
         transform:translateX(20px);
         color: #FF46F7;
         font-size: 4.8em;;
     }
     40% {
-      transform: translateY(-10px);
-      transform:translateX(-20px);
+      transform: translateY(0px);
+      transform:translateX(10px);
       color: aqua;
       font-size: 5.2em;
     }
@@ -287,6 +303,7 @@ footer{
     display: flex;
     flex-direction: row;
     padding:5%;
+    font-family: 'Poor Story', cursive;
 }
 
 #futur, #passe{
@@ -304,7 +321,19 @@ footer{
     background-color: #eeb53b;
     border-radius: 50px;
     color:black;
+    font-family: 'Poor Story', cursive;
 }
+
+.elem-futur a {
+    text-decoration: none;
+    color:black
+}
+
+.elem-futur a:hover{
+    color: #E8CB8F;
+    font-weight: bold;
+}
+
 
 .elem-passe{
     width:95%;
@@ -336,20 +365,20 @@ footer{
 
 #form-page{
     background-color: #E8CB8F;
-    background-image: url("images/pexels-alena-darmel-6940144.jpg");
-    background-size: 50%;
-    
+    background-image: url("images/bambou.jpg");
+    background-size: 100%;
 }
 
 #form-contact{
-    background-color:  rgb(148, 179, 124);;
+    background-color:  rgb(148, 179, 124);
+    opacity: 90%;
     color: beige;
     margin:10%;
     display: flex;
     flex-direction: column;
     width:60%;
-    height:400px;
-    padding:5%;
+    height:75vh;
+    padding:2%;
     align-items: center;
     margin: 10% 20% 10% 15%;
     border-radius: 50px;
@@ -364,15 +393,20 @@ footer{
 }
 
 .form-info{
-    width: 60%;
+    width: 80%;
     margin:2% 15% 2% 15%;
 }
 
 #form-contact label{
     color:beige;
-    font-size: 1.2em;
+    font-size: 1em;
     display: inline-block;
     text-align: right;
+}
+
+input{
+    height:30px;
+    width:100%;
 }
 
 textarea{
@@ -384,7 +418,7 @@ textarea{
     width:100%;
     height: 80px;
     border-radius: 50px;
-    background-color: greenyellow;
+    background-color: #9c8553;
     color:white;
     font-family: 'Poor Story', cursive;
     margin:3%;
@@ -399,12 +433,12 @@ textarea{
 }
 
 @keyframes color-subscrib{
-    from{background-color: greenyellow; color:white; font-size: 1.2em;box-shadow: 0px 0px 25px 5px greenyellow;}
+    from{background-color: #9c8553; color:white; font-size: 1.2em;}
     to {background-color: beige; color:#AF8327; font-size:1.3em;font-weight: bold;}
 }
 
-@media (prefers-color-scheme: dark) {
 
+@media (prefers-color-scheme: dark) {
     #home{
         background-image: url("images/Makotosan-sombre.jpg");
         background-position: center;
@@ -438,7 +472,7 @@ textarea{
     
     .menu-footer ul a{
         text-decoration: none;
-        color:greenyellow
+        color:greenyellow;
         font-weight: bold;
     }
     
@@ -562,6 +596,10 @@ textarea{
         filter: hue-rotate(180deg) brightness(150%);
     }
  
+    #form-page{
+        background-image: url("images/pexels-alena-darmel-6940144.jpg");
+        background-size: 100%;
+    }
 
     #form-contact{
         background-color:  rgb(165, 255, 81);;
@@ -596,11 +634,296 @@ textarea{
         animation-iteration-count: infinite;
     }
 
-    /*@keyframes color-subscrib{
+    @keyframes color-subscrib{
         from{background-color: greenyellow; color:white; font-size: 1.2em;  box-shadow: 1px 1px 3px 1px rgb(163, 204, 101);}
         to {background-color: rgb(255, 238, 0); color:#C39430; font-size:1.3em;font-weight: bold;box-shadow: 0px 1px 25px 10px rgb(255, 219, 135);}
-    }*/
-        
+    }
     }
     
+    @media all and (orientation: portrait){
+   
+    .menu  
+    {
+        height: 60px;
+        display: flex;
+        flex-direction: column;
+        background:  rgb(148, 179, 124);
+        height: 220px;
+        width:100%;
+        margin:0% 0% 0% 0%;
+        justify-content: center;
+    }
+ 
+    .menu ul {
+        display:none;
+        width: 100%;
+        flex-direction: column;
+        margin:10% 0% 5% 0%;
+
+    }
+
+    .menu ul, .menu li{
+        height:auto;
+        width: 100%;
+        font-size: 1.7em;
+    }  
+ 
+    label 
+    {
+        width: 100px;
+        display: flex;
+        margin: 2% 25% 2% 25%;
+        font-size: 40px;
+        color: white;
+        cursor: pointer;
+    }
+
+    #toggle:checked + ul {
+        display: flex;
+
+    }
+
+    #home{
+        background-color: black;
+        background-image: url("images/live-makotosan.jpg");
+        background-repeat: no-repeat;
+        background-size: 170% auto;
+        background-position: 50% 60%;
+    }
+
+    #home-content h1{
+        font-size: 5em;
+        font-family: 'Poor Story', cursive;
+    }
+    #home-content h2{
+        font-size: 3em;
+        margin:5% 20% 0% 20%;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-family: 'Roboto', sans-serif;
+    }
+    
+    #social-media{
+        width:100%;
+        padding:1% 5% 1% 5%;
+    }
+    .menu-footer{
+        position: sticky;
+        height: 60%;
+        display: flex;
+        align-items: center;
+        height: 100px;
+        width: 70%;
+        padding:1% 5% 1% 5%;
+    }
+
+
+    
+    .logo{
+        margin:5% 1% 5% 1%;
+        width: 80px;
+        border-radius: 30px;
+    }
+
+    .menu-footer ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        list-style: none;
+        width: 100%;
+        position: sticky;
+    }
+    
+    .menu-footer ul a{
+        font-size: 2rem;
+    }
+
+    #bloc-actu-content{
+        display: flex;
+        flex-direction: column;
+        padding:5% 5% 5% 5%;
+        background-color: antiquewhite;
+    }
+    
+    .image-actu{
+        width:90%;
+        border-radius: 30px;
+    }
+    
+    .bloc-actu{
+        background-color: rgb(148, 179, 124);
+        display: flex;
+        flex-direction: column;
+        width:90%;
+        justify-content: center;
+        margin:5% 2% 5% 2%;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 30px;
+        
+    }
+
+    .content-actu p{
+        font-size:4rem;
+    }
+    .content-actu h1{
+        font-size: 5rem;
+    }
+
+    #clip-page{
+        background-color: antiquewhite;
+    }
+    
+    #clip-spotify{
+        display:flex;
+        flex-direction: column;
+    }
+    
+    #all-clip{
+        margin:2% 2% 2% 2%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #clip-page h1{
+        font-size: 4.5em;
+    }
+    .show-clip{
+        display: flex;
+        flex-direction: column;
+        width:90%;
+        height:auto;
+        justify-content: center;
+        padding:2% 2% 2% 2%;
+    }
+    
+    .show-clip p, .show-clip h2{
+        margin:2% 2% 2% 2%;
+        font-size: 3rem;
+    }
+    
+    .spotify-element{
+       width:90%;
+       height: 200px;
+    }
+    
+    #body-even{
+        background-color: antiquewhite;
+    }
+    
+    #bandeau-even{
+        width:100%;
+        height:40%;
+        background-image: url(images/live-makotosan.jpg);
+        background-repeat: no-repeat;
+    }
+    
+    #bloc-evenements{
+        display: flex;
+        flex-direction: column;
+        padding:5%;
+        font-family: 'Poor Story', cursive;
+    }
+    
+    .elem-futur{
+        width:95%;
+        font-size: 2rem;
+    }
+    
+    .elem-futur a {
+        text-decoration: none;
+        color:black
+    }
+    
+    .elem-passe{
+        width:95%;
+        margin:2% 2% 2% 2%;
+        background-color: #E8CB8F;
+        border-radius: 50px;
+        color:#C39430;
+    }
+    
+    .elem-futur:hover{
+        animation: elem 0.1s linear 1 normal forwards;
+    }
+    
+
+    
+    .elem-futur-titre h1, .elem-passe-titre h1{
+        font-size: 5.5rem;
+        margin:2%;
+        color: #AF8327;
+    }
+    
+    #form-page{
+        background-color: #E8CB8F;
+        background-image: none;
+        margin-left:auto;
+        margin-right:auto;
+    }
+    
+    #form-contact{
+        background-color:  rgb(148, 179, 124);
+        color: beige;
+        width:80%;
+        margin:30% 10% 5% 8%;
+        height: auto;
+        border-radius: 50px;
+        font-family: 'Poor Story', cursive;
+        font-size: 4rem;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    #form-contact h1{
+       font-size: 2.5rem;
+    }
+    
+    .form-info{
+        width: 90%;
+    }
+    
+    #form-contact label{
+        color:beige;
+        font-size: 3.5rem;
+    }
+    #form-contact legend{
+        color:beige;
+        font-size: 3.5rem;
+    }
+
+    
+    input{
+        height:80px;
+        width:90%;
+        font-size: 4rem;
+    }
+    
+    textarea{
+        width:90%;
+        height:200px;
+        resize:vertical;
+        overflow-y: scroll;
+        font-size: 4rem;
+    }
+
+    #newsletter{
+        padding:10% 25% 10% 25%;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    #form-subscrib{
+        width:80%;
+        height: 180px;
+        border-radius: 50px;
+        font-size: 1.2em;
+        margin : 1% 10% 1% 10%;
+    }
+        
+    }
     
