--- a/fansite/fansite.css
+++ b/fansite/fansite.css
@@ -369,20 +369,19 @@ footer{
 }
 
 #form-contact{
-    background-color:  rgb(148, 179, 124);
     opacity: 90%;
     color: beige;
     margin:10%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width:60%;
     height:75vh;
     padding:2%;
     align-items: center;
-    margin: 10% 20% 10% 15%;
+
     border-radius: 50px;
     font-family: 'Poor Story', cursive;
-    font-size: 1.4em;
+    font-size: 1em;
 }
 
 #form-contact h1{
@@ -437,8 +436,8 @@ textarea{
 
 @media (prefers-color-scheme: dark) {
     #home{
-        background-image: url("images/Makotosan-sombre.jpg");
-        background-position: center;
+
+
         width: auto;
     }
 
@@ -594,13 +593,8 @@ textarea{
     }
  
     #form-page{
-        background-image: url("images/pexels-alena-darmel-6940144.jpg");
+        background-image: url("images/slimane bg-contact.jpg");
         background-size: 100%;
-    }
-
-    #form-contact{
-        background-color:  rgb(165, 255, 81);;
-        box-shadow: 0px 0px 25px 5px greenyellow;
     }
     
     #form-contact h1{
@@ -620,7 +614,6 @@ textarea{
     }
     
     #form-subscrib{
-        background-color: greenyellow;
         color:white;
         box-shadow: 1px 1px 3px 1px rgb(163, 204, 101);
     }
@@ -815,7 +808,6 @@ textarea{
     #bandeau-even{
         width:100%;
         height:40%;
-        background-image: url(images/live-makotosan.jpg);
         background-repeat: no-repeat;
     }
 
